# PPO-practice

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
experiments/: experiment_1.py
src/: config.py  settings.py  train.py
src/environments/: base_env.py  env_factory.py  mujoco_humanoid.py  simple_humanoid.py
src/experiments/: base_experiment.py  experiment_1.py  mujoco_experiment.py
src/models/: ppo_model.py
src/utils/: callbacks.py
