[project]
name = "ppo-practice"
version = "0.1.0"
description = "Practice for PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.1",
    "numpy<2.0",
    "stable-baselines3",
]

[tool.uv.sources]
stable-baselines3 = { git = "https://github.com/DLR-RM/stable-baselines3" }
