[project]
name = "ppo-practice"
version = "0.1.0"
description = "Practice for PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.1",
    "imageio>=2.35.1",
    "mujoco>=3.2.2",
    "numpy<2.0",
    "python-dotenv>=1.0.1",
    "stable-baselines3",
    "tensorboard>=2.17.1",
]

[tool.uv.sources]
stable-baselines3 = { git = "https://github.com/DLR-RM/stable-baselines3" }
